--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,10 @@ mccabe==0.6.1
 pkg-resources==0.0.0
 pycodestyle==2.5.0
 pylint==2.4.4
+pylint-django==2.0.13
+pylint-plugin-utils==0.6
 pytz==2019.1
+rope==0.16.0
 six==1.13.0
 sqlparse==0.3.0
 typed-ast==1.4.0
